--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ description: "Jeferson Araujo, Profissional de Tecnologia da Informação."
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: linkedin
-    url: https://www.linkedin.com/in/jefersonaraujo42/
+    url: https://www.linkedin.com/in/jeferson-araujo/
   - title: github
     url: http://github.com/jefersonaraujo
 
